// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render IssuesList with empty message 1`] = `
<div
  className="content-container"
>
  <h1
    className="page-header__title"
  >
    Viewing Issues of Repository 
    <span />
     
  </h1>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Issues
    </div>
    <div
      className="show-for-desktop"
    >
      Issue
    </div>
    <div
      className="show-for-desktop"
    >
      Created
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Issues for this Repo
      </span>
    </div>
  </div>
</div>
`;

exports[`should render IssuesList with issues 1`] = `
<div
  className="content-container"
>
  <h1
    className="page-header__title"
  >
    Viewing Issues of Repository 
    <span>
      James Edwards
    </span>
     
  </h1>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Issues
    </div>
    <div
      className="show-for-desktop"
    >
      Issue
    </div>
    <div
      className="show-for-desktop"
    >
      Created
    </div>
  </div>
  <div
    className="list-body"
  >
    <IssuesListItem
      author={
        Object {
          "avatarUrl": "https://avatars.githubusercontent.com/u/31744209?u=a6d48cf8f85179ba4db1b3268e8624fd21ddc2e5&v=4",
          "login": "jamesmogambi",
        }
      }
      bodyHTML="<p><a target=\\"_blank\\" rel=\\"noopener noreferrer\\" href=\\"https://user-images.githubusercontent.com/31744209/102247600-34eeef00-3f11-11eb-8c83-9b99b0ace69b.png\\"><img src=\\"https://user-images.githubusercontent.com/31744209/102247600-34eeef00-3f11-11eb-8c83-9b99b0ace69b.png\\" alt=\\"profiles\\" style=\\"max-width:100%;\\"></a><br>
    <a target=\\"_blank\\" rel=\\"noopener noreferrer\\" href=\\"https://user-images.githubusercontent.com/31744209/102247609-37514900-3f11-11eb-8366-1af9b2f0a6cb.png\\"><img src=\\"https://user-images.githubusercontent.com/31744209/102247609-37514900-3f11-11eb-8366-1af9b2f0a6cb.png\\" alt=\\"sign-in\\" style=\\"max-width:100%;\\"></a><br>
    <a target=\\"_blank\\" rel=\\"noopener noreferrer\\" href=\\"https://user-images.githubusercontent.com/31744209/102247613-37514900-3f11-11eb-9a0f-8e1a1b8d3d22.png\\"><img src=\\"https://user-images.githubusercontent.com/31744209/102247613-37514900-3f11-11eb-9a0f-8e1a1b8d3d22.png\\" alt=\\"user-dashboard\\" style=\\"max-width:100%;\\"></a><br>
    <a target=\\"_blank\\" rel=\\"noopener noreferrer\\" href=\\"https://user-images.githubusercontent.com/31744209/102247619-38827600-3f11-11eb-8404-a310eb6663d1.png\\"><img src=\\"https://user-images.githubusercontent.com/31744209/102247619-38827600-3f11-11eb-8404-a310eb6663d1.png\\" alt=\\"comment\\" style=\\"max-width:100%;\\"></a><br>
    <a target=\\"_blank\\" rel=\\"noopener noreferrer\\" href=\\"https://user-images.githubusercontent.com/31744209/102248587-5e5c4a80-3f12-11eb-845a-b99de1197453.png\\"><img src=\\"https://user-images.githubusercontent.com/31744209/102248587-5e5c4a80-3f12-11eb-845a-b99de1197453.png\\" alt=\\"edit-profile\\" style=\\"max-width:100%;\\"></a><br>
    <a target=\\"_blank\\" rel=\\"noopener noreferrer\\" href=\\"https://user-images.githubusercontent.com/31744209/102247624-391b0c80-3f11-11eb-8863-60c4a5edcff6.png\\"><img src=\\"https://user-images.githubusercontent.com/31744209/102247624-391b0c80-3f11-11eb-8863-60c4a5edcff6.png\\" alt=\\"index\\" style=\\"max-width:100%;\\"></a><br>
    <a target=\\"_blank\\" rel=\\"noopener noreferrer\\" href=\\"https://user-images.githubusercontent.com/31744209/102247631-3a4c3980-3f11-11eb-8feb-6e50c76e65a6.png\\"><img src=\\"https://user-images.githubusercontent.com/31744209/102247631-3a4c3980-3f11-11eb-8feb-6e50c76e65a6.png\\" alt=\\"posts\\" style=\\"max-width:100%;\\"></a></p>"
      createdAt="2020-12-15T17:20:41Z"
      id="MDU6SXNzdWU3Njc4NjI5Nzk="
      number={1}
      state="OPEN"
      title="screenshots"
      url="https://github.com/jamesmogambi/dev-_MERN-Stack/issues/1"
    />
    <IssuesListItem
      author={
        Object {
          "avatarUrl": "https://avatars.githubusercontent.com/u/31744209?u=a6d48cf8f85179ba4db1b3268e8624fd21ddc2e5&v=4",
          "login": "jamesmogambi",
        }
      }
      bodyHTML="<p><a target=\\"_blank\\" rel=\\"noopener noreferrer\\" href=\\"https://user-images.githubusercontent.com/31744209/107021668-800cdc00-67b5-11eb-931e-89740b2a4cae.jpg\\"><img src=\\"https://user-images.githubusercontent.com/31744209/107021668-800cdc00-67b5-11eb-931e-89740b2a4cae.jpg\\" alt=\\"IMG_20210119_084748\\" style=\\"max-width:100%;\\"></a></p>"
      createdAt="2021-02-05T10:43:31Z"
      id="MDU6SXNzdWU4MDIwNTc4MDI="
      number={2}
      state="CLOSED"
      title="author"
      url="https://github.com/jamesmogambi/dev-_MERN-Stack/issues/2"
    />
  </div>
</div>
`;
